--- a/src/list.css
+++ b/src/list.css
@@ -1,29 +1,46 @@
 .list {
     position: absolute;
-    left: 80%;
-    width: calc(20% - 20px);
+    left: 100%;
     height: 100%;
-    overflow-y: scroll;
-    padding-left: 20px;
+    width: calc(20% - 3em);
+    padding: 0 1.5em;
     z-index: 2;
     background-color: #eee;
-    opacity: 0;
-    transition: opacity 0.25s;
+    transition: 0.25s left;
 }
 
-.list:hover {
-    opacity: 1;
+.list.show {
+    left: 80%;
 }
 
 .list h3 {
-    margin: 10px 0;
+    position: absolute;
+    transform: rotate(270deg);
+    top: 100px;
+    left: -105px;
+    width: 175px;
+    line-height: 2em;
     font-size: 2em;
     font-weight: normal;
+    text-align: center;
+    border-radius: 0.5em 0.5em 0 0;
+    background-color: #eee;
+    cursor: pointer;
+}
+
+.list div.scroll {
+    height: 100%;
+    overflow-y: scroll;
 }
 
 .list ul li.item {
     font-size: 1.4em;
     list-style: none;
-    margin-bottom: 1em;
+    padding: 0.5em 0;
+    border-bottom: 1px solid #333;
     cursor: pointer;
+}
+
+.list ul li.item:last-of-type {
+    border-bottom: none;
 }
