--- a/src/style/list.css
+++ b/src/style/list.css
@@ -6,7 +6,7 @@
     padding: 0 1.5em;
     z-index: 2;
     background-color: #eee;
-    transition: 0.5s left cubic-bezier(0, 1, 0.5, 1);
+    transition: left 0.25s;
 }
 
 .list.show {
@@ -23,9 +23,10 @@
     font-size: 2em;
     font-weight: normal;
     text-align: center;
-    border-radius: 0.5em 0.5em 0 0;
+    border-radius: 0.35em 0.35em 0 0;
     background-color: #eee;
     cursor: pointer;
+    user-select: none;
 }
 
 .list div.scroll {
