allow selecting more than one region at a time; resolves #6

--- a/src/style/region.css
+++ b/src/style/region.css
@@ -20,8 +20,13 @@ div.regions div.region div.stations {
     transition: transform 0.4s;
 }
 
+div.regions div.region.show {
+    font-weight: bold;
+}
+
 div.regions div.region.show div.stations {
     height: auto;
     opacity: 1;
     transform: scaleY(1);
+    font-weight: normal;
 }
