--- a/src/style/region.css
+++ b/src/style/region.css
@@ -6,6 +6,7 @@ div.regions div.region {
     border-bottom: 1px solid #333;
     cursor: pointer;
     user-select: none;
+    min-height: 1.7em;
 }
 
 div.regions div.region:last-of-type {
